force-app/main/default/objects/Opportunity/fields/Mercury_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Mercury_Error_Message__c</fullName>
    <label>Mercury Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>