force-app/main/default/objects/Opportunity/fields/Mercury_Invoice_Id__c.field-meta.xml
<CustomField>
    <fullName>Mercury_Invoice_Id__c</fullName>
    <label>Mercury Invoice Id</label>
    <length>50</length>
    <type>Text</type>
    <externalId>true</externalId>
</CustomField>