force-app/main/default/objects/Opportunity/fields/Mercury_Invoice_URL__c.field-meta.xml
<CustomField>
    <fullName>Mercury_Invoice_URL__c</fullName>
    <label>Mercury Invoice URL</label>
    <type>Url</type>
</CustomField>